--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -6,9 +6,18 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/banco-de-dados
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
 springdoc.override-with-generic-response=false
+
+spring.output.ansi.enabled=always
+
+spring.main.banner-mode=off
+
+logging.file.name=gerenciador_de_tarefas.log
+logging.pattern.console=%clr(%d{dd/MM/yyyy HH:mm:ss}){faint} %clr(%p) %clr(PID:${PID}){faint} %clr([%t]){faint} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n
+logging.level.root=warn
+logging.level.org.springframework.web=debug
+logging.level.com.karinasasaki.gerenciador_de_tarefas=info
