refactor: Muda o formato da data para dd/MM/yyyy HH:mm:ss

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=gerenciador-de-tarefas
+
 spring.profiles.active=develop
+
 spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+spring.jackson.date-format=dd/MM/yyyy HH:mm:ss
