--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -20,4 +20,4 @@ logging.file.name=gerenciadordetarefas.log
 logging.pattern.console=%clr(%d{dd/MM/yyyy HH:mm:ss}){faint} %clr(%p) %clr(PID:${PID}){faint} %clr([%t]){faint} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n
 logging.level.root=warn
 logging.level.org.springframework.web=debug
-logging.level.com.karinasasaki.gerenciadordetarefas=info
+logging.level.io.github.karinasasaki.gerenciadordetarefas=info
